--- a/Earthquakes/UI/Screens/EarthquakeDetailViewController.xib
+++ b/Earthquakes/UI/Screens/EarthquakeDetailViewController.xib
@@ -7,7 +7,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DetailViewController" customModule="Earthquakes" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="EarthquakeDetailViewController" customModule="Earthquakes" customModuleProvider="target">
             <connections>
                 <outlet property="detailDescriptionLabel" destination="0aD-4S-LvO" id="cH9-Lk-0FN"/>
                 <outlet property="view" destination="nvr-nS-ZQp" id="sUk-gc-VAS"/>
